<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3F41"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#2D2F31"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="HardcodedText">

                <moe.ibox.transformercoilguard.view.IconView
                    android:id="@+id/iconView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#xe742;"
                    android:textColor="#1D91C9"
                    android:textSize="140sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView11" />

                <moe.ibox.transformercoilguard.view.IconView
                    android:id="@+id/iconView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="&#xe65d;"
                    android:textColor="#2196F3"
                    android:textSize="60sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="A"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroupCoilSelect"
                    app:layout_constraintStart_toStartOf="@+id/radioGroupCoilSelect" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:text="B"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroupCoilSelect"
                    app:layout_constraintStart_toEndOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:text="C"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroupCoilSelect"
                    app:layout_constraintStart_toEndOf="@+id/textView8" />

                <RadioGroup
                    android:id="@+id/radioGroupCoilSelect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:checkedButton="@id/radioButtonCoilA"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/iconView4"
                    app:layout_constraintEnd_toEndOf="@+id/iconView4"
                    app:layout_constraintStart_toStartOf="@+id/iconView4">

                    <RadioButton
                        android:id="@+id/radioButtonCoilA"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="23dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioButtonCoilB"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="-17dp"
                        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioButtonCoilC"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="-17dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/tag_lissajous_figure_monitor"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/iconView5"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iconView5"
                    app:layout_constraintTop_toTopOf="@+id/iconView5"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/tag_lissajous_description"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/iconView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <ProgressBar
                    android:id="@+id/progress_auto_refresh"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="4dp"
                    android:indeterminate="false"
                    android:max="30"
                    android:progress="12"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewAutoRefresh"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintStart_toEndOf="@+id/textViewAutoRefresh"
                    app:layout_constraintTop_toTopOf="@+id/textViewAutoRefresh" />

                <TextView
                    android:id="@+id/textViewAutoRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/app_auto_refresh_enabled"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/iconView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent">

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/lissajous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="#2D2F31"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blockTemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <moe.ibox.transformercoilguard.view.IconView
                        android:id="@+id/iconViewTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="&#xe629;"
                        android:textColor="#F44336"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_temperature"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iconViewTemp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="28.3℃"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="#47494A" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blockCoilTemp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <moe.ibox.transformercoilguard.view.IconView
                        android:id="@+id/iconViewCoilTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="&#xe83a;"
                        android:textColor="#2196F3"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/tag_temperature_coil"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iconViewCoilTemp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.507" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="76.2℃"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:background="#47494A" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blockVoltage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <moe.ibox.transformercoilguard.view.IconView
                        android:id="@+id/iconViewVoltage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="&#xe62b;"
                        android:textColor="#FF9800"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_voltage"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iconViewVoltage"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.507" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="330.2V"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>